--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "prebuild": "rimraf lib",
+    "build": "tsc -b tsconfig.build.json"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/TheNightmareX/vast-orm/issues"
   },
-  "homepage": "https://github.com/TheNightmareX/vast-orm#readme"
+  "homepage": "https://github.com/TheNightmareX/vast-orm#readme",
+  "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.4",
+    "ts-lib": "0.0.5",
+    "ts-node": "^10.1.0",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
+  }
 }
