--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\"",
     "prebuild": "rimraf lib",
-    "build": "tsc -b tsconfig.build.json"
+    "build": "tsc -b tsconfig.build.json",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,8 @@
     "ts-lib": "0.0.5",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-redirect": "^1.2.5"
   }
 }
