--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "berry-orm",
   "version": "0.0.0",
-  "description": "",
+  "description": "Object Relational Mapping for front-ends.",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
