--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
     "typescript": "^4.3.5",
     "vuepress": "^1.8.2",
     "vuepress-plugin-redirect": "^1.2.5"
-  }
+  },
+  "files": [
+    "src",
+    "lib",
+    "!__test__",
+    "!tsconfig.*",
+    "README*.md"
+  ]
 }
