--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prebuild": "rimraf lib",
     "build": "tsc -b tsconfig.build.json",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "lint": "eslint --cache \"**/*.ts\"",
+    "prettier:diff": "prettier --list-different \"**/*.ts\""
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,11 @@
   "homepage": "https://github.com/TheNightmareX/berry-orm#readme",
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
@@ -49,5 +56,11 @@
     "!__test__",
     "!tsconfig.*",
     "README*.md"
-  ]
+  ],
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  }
 }
