--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Installation
         uses: bahmutov/npm-install@v1
         with:
-          install-command: npm install
+          install-command: yarn
       - name: Lint
-        run: npm run lint
+        run: yarn lint
       - name: Style check with Prettier
-        run: npm run prettier:diff
+        run: yarn prettier:diff
