--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Installation
         uses: bahmutov/npm-install@v1
         with:
-          install-command: yarn
+          install-command: npm install
       - name: Test
-        run: yarn test
+        run: npm run test
