--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format:diff": "prettier --list-different \"src/**/*.ts\"",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "lint": "eslint --cache \"src/**/*.ts\""
+    "lint": "eslint --cache \"src/**/*.ts\"",
+    "lint:fix": "eslint --cache --fix \"src/**/*.ts\""
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
