--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "ES2019",
-    "module": "CommonJS",
-    "lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"],
+    "target": "ES2020",
+    "module": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable", "ScriptHost"],
     "strict": true,
     "declaration": true,
     "declarationMap": true,
