--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "tslib": "^2.3.0",
-    "typescript": "4.4.x",
+    "typescript": "^4.5.4",
     "vuepress": "^1.8.2",
     "vuepress-plugin-redirect": "^1.2.5"
   },
