--- a/package.json
+++ b/package.json
@@ -53,6 +53,9 @@
     "vuepress": "^1.8.2",
     "vuepress-plugin-redirect": "^1.2.5"
   },
+  "dependencies": {
+    "lazy-promise": "^4.0.0"
+  },
   "files": [
     "src",
     "lib",
